--- a/finance-control-korp/src/app/pages/expenses/expenses.component.html
+++ b/finance-control-korp/src/app/pages/expenses/expenses.component.html
@@ -20,6 +20,14 @@
         <option *ngFor="let cat of categories" [value]="cat">{{ cat }}</option>
       </select>
     </div>
+    <div>
+      <label for="date">Data:</label>
+      <input
+        id="date"
+        type="date"
+        formControlName="date"
+      />
+    </div>    
     <button type="submit" [disabled]="expenseForm.invalid">Salvar</button>
   </form>
 
